--- a/src/App.css
+++ b/src/App.css
@@ -342,6 +342,19 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   z-index: -4;
 }
 
+.skill-item-list {
+  list-style: none;
+  margin-top: 15px;
+  margin-right: 30px;
+  align-items: center;
+  color: lightgray;
+}
+
+.skill-item-list li:hover {
+  color: rgb(247, 27, 247);
+  cursor: pointer;
+}
+
 .App {
   text-align: center;
 }
