--- a/src/App.css
+++ b/src/App.css
@@ -522,7 +522,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 
 .contact .message-me .msg-icon {
-  margin-top: 5%;
+  margin-top: 20px;
   width: 40%;
 }
 
