--- a/src/App.css
+++ b/src/App.css
@@ -497,9 +497,8 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 
 /* Contact CSS */
 .contact {
-  /*linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);*/
+  background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
   padding: 60px 0 60px 0;
-  background-color: #121212;
 }
 
 .background-image {
