--- a/src/App.css
+++ b/src/App.css
@@ -58,6 +58,7 @@ a:hover {
 img {
   width: 100%;
   height: auto;
+  color: white;
 }
 
 button {
@@ -93,6 +94,7 @@ nav.navbar {
   z-index: 9999;
   transition:  0.32s ease-in-out;
 }
+
 nav.navbar.scrolled {
   padding: 0px 0;
   background-color: #121212;
@@ -124,14 +126,14 @@ span.navbar-text {
 .social-icon a {
     width: 42px;
     height: 42px;
-    background: rgba(217, 217, 217, 0.1);
+    background: linear-gradient(rgb(179, 113, 255), rgb(53, 53, 254));
     display: inline-flex;
     border-radius: 50%;
     margin-right: 6px;
     align-items: center;
     justify-content: center;
     line-height: 1;
-    border: 1px solid rgba(255, 255, 255, 0.5);
+    border: 1px solid black;
 }
 .social-icon a::before {
     content: "";
@@ -156,8 +158,8 @@ span.navbar-text {
 }
 .navbar-text button {
   font-weight: 700;
-  color: #fff;
-  border: 1px solid #fff;
+  color: #fff !important;
+  border: 1px solid transparent;
   padding: 18px 34px;
   font-size: 18px;
   margin-left: 18px;
@@ -165,6 +167,11 @@ span.navbar-text {
 	background-color: transparent;
 	transition: 0.3s ease-in-out;
 }
+
+.navbar-text button a {
+  color: rgb(247, 27, 247);
+}
+
 .navbar-text button span {
   z-index: 1;
 }
@@ -342,7 +349,8 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   position: relative;
 }
 .skill-slider .item img {
-  width: 50%;
+  width: 18%;
+  height: 18%;
   margin: 0 auto 15px auto;
 }
 
@@ -387,6 +395,16 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   text-align: center;
   width: 56%;
 }
+
+.project-links a {
+  color: white;
+}
+
+.project-links a:hover {
+  font-size: 20px;
+  color: rgb(247, 27, 247);
+}
+
 .project .nav.nav-pills {
   width: 72%;
   margin: 0 auto;
