--- a/src/App.css
+++ b/src/App.css
@@ -158,7 +158,7 @@ span.navbar-text {
 }
 .navbar-text button {
   font-weight: 700;
-  color: #fff !important;
+  color: white;
   border: 1px solid transparent;
   padding: 18px 34px;
   font-size: 18px;
@@ -187,13 +187,15 @@ span.navbar-text {
   transition: 0.3s ease-in-out;
 }
 .navbar-text button:hover {
-  color: #121212;
+  color:rgb(247, 27, 247);
 }
 .navbar-text button:hover::before {
 	content: "";
 	width: 100%;
 	height: 100%;
 	position: absolute;
+  color:rgb(247, 27, 247);
+  
 }
 nav.navbar .navbar-toggler:active,
 nav.navbar .navbar-toggler:focus {
